Add DTOs and new endpoint for messages